listar ost y clases client